<resources>
    <string name="app_name">Catch the Ball</string>
    <string name="point_pink">30 point</string>
    <string name="btn_start">START</string>
    <string name="point_orange">10 point</string>
    <string name="point_black">Game Over</string>
    <string name="game_over">GAME OVER</string>
    <string name="tap_to_start">Tap to start</string>
    <string name="score">Score : %d</string>
    <string name="high_score">High Score : %d</string>
    <string name="result_score">%d</string>
    <string name="try_again">Play again</string>
</resources>